--- a/iniciSessio.html
+++ b/iniciSessio.html
@@ -55,7 +55,8 @@
                 </form>
               </div>
               <div class = "inferior">
-                <a href="#">Tornar</a>
+                <a href="index.html">Tornar</a>
+
               </div>
             </div>
       </body>
