--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
         <img src="escuts/villarreal.png" style="width: 10vh;">
     </header>
     <div class="container-fluid">
-      <div class="navbar">
+      <nav class="navbar">
         <a href="index.html">Inici</a>
-        <a class="nav-link" href="#">Classificació</a>
+        <a href="#">Classificació</a>
         <a class="nav-link" href="#">Resultats</a>
         <a class="nav-link" href="#">Jugadores</a>
         <a class="nav-link" href="#">Estadístiques</a>
         <a class="nav-link" href="#">Sancions</a>
         <a class="nav-link" href="iniciSessio.html">Iniciar sessió</a>
-      </div>
+      </nav>
     </div>
+    
     <div class="row">
       <div class="columna">
         <h2 style="text-align: center;">Notícies</h2>
