--- a/iniciSessio.html
+++ b/iniciSessio.html
@@ -31,7 +31,7 @@
         <img src="escuts/villarreal.png" style="width: 10vh;">
     </header>
     <div class="container-fluid">
-      <div class="navbar">
+      <nav class="navbar">
         <a href="index.html">Inici</a>
         <a class="nav-link" href="#">Classificació</a>
         <a class="nav-link" href="#">Resultats</a>
@@ -39,27 +39,9 @@
         <a class="nav-link" href="#">Estadístiques</a>
         <a class="nav-link" href="#">Sancions</a>
         <a class="nav-link" href="iniciSessio.html">Iniciar sessió</a>
-      </div>
+      </nav>
     </div>
-      <body>
-        <div id = "contenedor">
-            <div id = "central">
-              <div id = "login">
-                <div class = "titulo">
-                  Dades d'accés
-                </div>
-                <form id = "login">
-                  <input type = "text" name = "usuari" placeholder="Usuari" required>
-                  <input type="password" placeholder="Contrasenya" name="password" required>
-                  <button type="submit" title="Ingresar" name="Ingresar">Login</button>
-                </form>
-              </div>
-              <div class = "inferior">
-                <a href="index.html">Tornar</a>
-
-              </div>
-            </div>
-      </body>
+    
   </body>
     <div id="app">
         <div id = "contenedor">
