--- a/index.html
+++ b/index.html
@@ -74,86 +74,100 @@
               <td>1</td>
               <td><img src="escuts/fc-barcelona-femenino.png" style="max-width: 8vh;"></td>
               <td>FC Barcelona</td>
-              <td>10</td>
+              <td>29</td>
+              <td>28</td>
+              <td>1</td>
+              <td>0</td>
+              <td>117</td>
               <td>8</td>
-              <td>1</td>
-              <td>1</td>
-              <td>25</td>
-              <td>5</td>
-              <td>25</td>
+              <td>85</td>
             </tr>
             <tr>
               <td>2</td>
               <td><img src="escuts/real-madrid.png" style="max-width: 8vh;"></td>
               <td>Real Madrid CF</td>
-              <td>10</td>
-              <td>7</td>
+              <td>29</td>
+              <td>24</td>
               <td>2</td>
-              <td>1</td>
-              <td>21</td>
-              <td>8</td>
-              <td>23</td>
+              <td>3</td>
+              <td>79</td>
+              <td>24</td>
+              <td>74</td>
             </tr>
             <tr>
               <td>3</td>
               <td><img src="escuts/levante-femenino.png" style="max-width: 8vh;"></td>
               <td>Levante</td>
-              <td>10</td>
-              <td>7</td>
-              <td>2</td>
-              <td>1</td>
-              <td>21</td>
-              <td>8</td>
-              <td>23</td>
+              <td>29</td>
+              <td>20</td>
+              <td>3</td>
+              <td>6</td>
+              <td>79</td>
+              <td>34</td>
+              <td>63</td>
+            </tr>
+
+            <tr>
+              <td>4</td>
+              <td><img src="escuts/atletico-feminas.png" style="max-width: 8vh;"></td>
+              <td>Atlético Madrid</td>
+              <td>29</td>
+              <td>15</td>
+              <td>9</td>
+              <td>5</td>
+              <td>50</td>
+              <td>35</td>
+              <td>54</td>
             </tr>
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td>5</td>
+              <td><img src="escuts/madrid-futbol-femenino.png" style="max-width: 8vh;"></td>
+              <td>Madrid CF</td>
+              <td>29</td>
+              <td>16</td>
+              <td>5</td>
+              <td>8</td>
+              <td>63</td>
+              <td>47</td>
+              <td>53</td>
             </tr>
             <tr>
-              <td>2</td>
-              <td><img src="escuts/villarreal.png" style="max-width: 8vh;"></td>
-              <td>Villarreal CF</td>
-              <td>10</td>
+              <td>6</td>
+              <td><img src="escuts/granadilla.png" style="max-width: 6vh;"></td>
+              <td>Granadilla Tenerife</td>
+              <td>29</td>
+              <td>11</td>
               <td>7</td>
-              <td>2</td>
-              <td>1</td>
-              <td>21</td>
+              <td>11</td>
+              <td>35</td>
+              <td>40</td>
+              <td>40</td>
+            </tr>
+            
+            <tr>
+              <td>7</td>
+              <td><img src="escuts/real-sociedad.png" style="max-width: 6vh;"></td>
+              <td> Real Societat</td>
+              <td>29</td>
+              <td>10</td>
               <td>8</td>
-              <td>23</td>
+              <td>11</td>
+              <td>53</td>
+              <td>49</td>
+              <td>38</td>
             </tr>
             <tr>
-              <td>2</td>
-              <td><img src="escuts/Alhama el pozo.png" style="max-width: 8vh;"></td>
-              <td>Alhama CF ElPozo</td>
-              <td>10</td>
-              <td>7</td>
-              <td>2</td>
-              <td>1</td>
-              <td>21</td>
               <td>8</td>
-              <td>23</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td><img src="escuts/Deportivo Alaves.png" style="max-width: 6vh;"></td>
-              <td>Deportivo Alavés</td>
+              <td><img src="escuts/sevilla.png" style="max-width: 6vh;"></td>
+              <td>Sevilla</td>
+              <td>29</td>
+              <td>9</td>
               <td>10</td>
-              <td>7</td>
-              <td>2</td>
-              <td>1</td>
-              <td>21</td>
-              <td>8</td>
-              <td>23</td>
-            </tr>
+              <td>11</td>
+              <td>43</td>
+              <td>44</td>
+              <td>37</td>
+            </tr>
             
           </tbody>
         </table>
