--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class="container-fluid">
       <nav class="navbar">
         <a href="index.html">Inici</a>
-        <a href="#">Classificació</a>
-        <a class="nav-link" href="#">Resultats</a>
+        <a href="classificacio.html">Classificació</a>
+        <a class="nav-link" href="resultats.html">Resultats</a>
         <a class="nav-link" href="#">Jugadores</a>
         <a class="nav-link" href="#">Estadístiques</a>
         <a class="nav-link" href="#">Sancions</a>
