--- a/barcelona.html
+++ b/barcelona.html
@@ -39,21 +39,26 @@
             <a class="nav-link" href="iniciSessio.html">Iniciar sessió</a>
           </nav>
         </div>
-
-        <header class = "barcelona-header">
-            <div class="logo-container">
-                <img src="escuts/fc-barcelona-femenino.png" style="max-width: 30vh;" alt="Escut del FC Barcelona">
-            </div>
+        <header class="barcelona-header card">
+          <div class="card-body">
             <div class="club-info">
-                <h1>FC Barcelona Femení</h1>
-                <!--<p>Estadi: Johan Cruyff</p>
-                <p>President: Joan La Porta</p>
-                <p>Fundació: 2002</p>
-                <p>Patrocinador: Spotify</p>
-                <p>Ciutat: Barcelona</p>
-                <p>Capacitat: 6000</p>-->
+              <div class="escut">
+                <img src="escuts/fc-barcelona-femenino.png" alt="Escut del FC Barcelona">
               </div>
+              <h1 class="card-title">FC Barcelona Femení</h1>
+            </div>
+            <div class="card-text">
+              <p>Estadi: Johan Cruyff</p>
+              <p>President: Joan Laporta</p>
+              <p>Fundació: 2002</p>
+              <p>Patrocinador: Spotify</p>
+              <p>Ciutat: Barcelona</p>
+              <p>Capacitat: 6000</p>
+            </div>
+          </div>
         </header>
+        
+        
 
         <div class="row">
             <div class="columna">
