--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <img src="escuts/Alhama el pozo.png" style="max-width: 10vh;">
         <img src="escuts/athletic-femenino.png" style="max-width:10vh;">
         <img src="escuts/atletico-feminas.png" style="max-width: 10vh;">
-        <img src="escuts/fc-barcelona-femenino.png" style="max-width: 10vh;">
+        <div class = 'escut'>
+          <img src="escuts/fc-barcelona-femenino.png" style="max-width: 10vh;">
+          <a href="barcelona.html" class="botonEscudo">Boton</a>
+        </div>
         <img src="escuts/betis.png" style="max-width: 10vh;">
         <img src="escuts/granadilla.png" style="max-width: 10vh;">
         <img src="escuts/levante las planas.png" style="max-width: 10vh;">
@@ -30,8 +33,8 @@
     <div class="container-fluid">
       <nav class="navbar">
         <a href="index.html">Inici</a>
-        <a href="#">Classificació</a>
-        <a class="nav-link" href="#">Resultats</a>
+        <a href="classificacio.html">Classificació</a>
+        <a class="nav-link" href="resultats.html">Resultats</a>
         <a class="nav-link" href="#">Jugadores</a>
         <a class="nav-link" href="#">Estadístiques</a>
         <a class="nav-link" href="#">Sancions</a>
@@ -72,7 +75,10 @@
           <tbody>
             <tr>
               <td>1</td>
-              <td><img src="escuts/fc-barcelona-femenino.png" style="max-width: 8vh;"></td>
+              <td><div class = 'escut'>
+                <img src="escuts/fc-barcelona-femenino.png" style="max-width: 8vh;">
+                <a href="barcelona.html" class="botonEscudo">Boton</a>
+              </div></td>
               <td>FC Barcelona</td>
               <td>29</td>
               <td>28</td>
