--- a/iniciSessio.html
+++ b/iniciSessio.html
@@ -33,7 +33,7 @@
     <div class="container-fluid">
       <nav class="navbar">
         <a href="index.html">Inici</a>
-        <a class="nav-link" href="#">Classificació</a>
+        <a href="#">Classificació</a>
         <a class="nav-link" href="#">Resultats</a>
         <a class="nav-link" href="#">Jugadores</a>
         <a class="nav-link" href="#">Estadístiques</a>
