--- a/barcelona.html
+++ b/barcelona.html
@@ -45,21 +45,12 @@
               <div class="escut">
                 <img src="escuts/fc-barcelona-femenino.png" alt="Escut del FC Barcelona">
               </div>
-              <h1 class="card-title">FC Barcelona Femení</h1>
+              <h1 class="card-title">FC Barcelona</h1>
             </div>
-            <div class="card-text">
-              <p>Estadi: Johan Cruyff</p>
-              <p>President: Joan Laporta</p>
-              <p>Fundació: 2002</p>
-              <p>Patrocinador: Spotify</p>
-              <p>Ciutat: Barcelona</p>
-              <p>Capacitat: 6000</p>
+            <div class="card-details">
             </div>
           </div>
         </header>
-        
-        
-
         <div class="row">
             <div class="columna">
               <h2 style="text-align: center;">Plantilla</h2>
