--- a/iniciSessio.html
+++ b/iniciSessio.html
@@ -33,15 +33,14 @@
     <div class="container-fluid">
       <nav class="navbar">
         <a href="index.html">Inici</a>
-        <a href="#">Classificació</a>
-        <a class="nav-link" href="#">Resultats</a>
-        <a class="nav-link" href="#">Jugadores</a>
-        <a class="nav-link" href="#">Estadístiques</a>
-        <a class="nav-link" href="#">Sancions</a>
-        <a class="nav-link" href="iniciSessio.html">Iniciar sessió</a>
+        <a href="classificacio.html">Classificació</a>
+        <a href="resultats.html">Resultats</a>
+        <a href="#">Jugadores</a>
+        <a href="#">Estadístiques</a>
+        <a href="#">Sancions</a>
+        <a href="#">Iniciar sessió</a>
       </nav>
     </div>
-
     <div id="app">
         <div id = "contenedor">
             <div id = "central">
