--- a/iniciSessio.html
+++ b/iniciSessio.html
@@ -17,7 +17,10 @@
         <img src="escuts/Alhama el pozo.png" style="max-width: 10vh;">
         <img src="escuts/athletic-femenino.png" style="max-width:10vh;">
         <img src="escuts/atletico-feminas.png" style="max-width: 10vh;">
-        <img src="escuts/fc-barcelona-femenino.png" style="max-width: 10vh;">
+        <div class = 'escut'>
+          <img src="escuts/fc-barcelona-femenino.png" style="max-width: 10vh;">
+          <a href="barcelona.html" class="botonEscudo">Boton</a>
+        </div>
         <img src="escuts/betis.png" style="max-width: 10vh;">
         <img src="escuts/granadilla.png" style="max-width: 10vh;">
         <img src="escuts/levante las planas.png" style="max-width: 10vh;">
@@ -32,6 +35,7 @@
     </header>
     <div class="container-fluid">
       <nav class="navbar">
+        <a href="index.html">Inici</a>
         <a href="classificacio.html">Classificació</a>
         <a href="resultats.html">Resultats</a>
         <a href="#">Jugadores</a>
