--- a/classificacio.html
+++ b/classificacio.html
@@ -14,7 +14,10 @@
         <img src="escuts/Alhama el pozo.png" style="max-width: 10vh;">
         <img src="escuts/athletic-femenino.png" style="max-width:10vh;">
         <img src="escuts/atletico-feminas.png" style="max-width: 10vh;">
+        <div class = 'escut'>
         <img src="escuts/fc-barcelona-femenino.png" style="max-width: 10vh;">
+          <a href="barcelona.html" class="botonEscudo">Boton</a>
+        </div>
         <img src="escuts/betis.png" style="max-width: 10vh;">
         <img src="escuts/granadilla.png" style="max-width: 10vh;">
         <img src="escuts/levante las planas.png" style="max-width: 10vh;">
