--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     
     <div class="row">
-      <div class="columna">
+      <div class="columna-sm-4">
         <h2 style="text-align: center;">Notícies</h2>
         <div class="card">
           <img src="noticia.jpg" style="width: 100%">
@@ -55,7 +55,7 @@
           </div>
         </div>
       </div>
-      <div class="columna" >
+      <div class="columna-sm-4" >
         <h2 style="text-align: center;">Classificació</h2>
         <table>
           <thead>
@@ -177,69 +177,85 @@
           </tbody>
         </table>
       </div>
-      <div class="columna" >
-        <h2 style="text-align: center;">Resultats</h2>
+      <div class="columna-sm-4">
+        <h2 style="text-align: center;">Propera Jornada</h2>
         <div class="card">
           <table>
             <tr>
-              <td>
-                <div class = 'escut'>
-                  <img src="escuts/fc-barcelona-femenino.png" style="max-width: 8vh;">
-                  <a href="barcelona.html" class="botonEscudo">Boton</a>
-                </div></td>
-              <td>FC Barcelona</td>
-              <td>3-0</td>
-              <td>Athletic Club</td>
-              <td><img src="escuts/athletic-femenino.png" style="max-width: 8vh;"></td>
-            </tr>
-            <tr>
-              <td><img src="escuts/betis.png" style="max-width: 8vh;"></td>
-              <td>Real Betis</td>
-              <td>1-1</td>
-              <td>Deportivo Alavés</td>
-              <td><img src="escuts/Deportivo Alaves.png" style="max-width: 6vh;"></td>
-            </tr>
-            <tr>
-              <td><img src="escuts/levante las planas.png" style="max-width: 8vh;"></td>
-              <td>FC Levante Las Planas</td>
-              <td>1-0</td>
-              <td>Real Sociedad</td>
               <td><img src="escuts/real-sociedad.png" style="max-width: 8vh;"></td>
+              <td>Real Sociedad</td>
+              <td>Dv. 19/5
+                19:00
+              </td>
+              <td>Real Madrid CF</td>
+              <td><img src="escuts/real-madrid.png" style="max-width: 8vh;"></td>
             </tr>
             <tr>
-              <td><img src="escuts/Alhama el pozo.png" style="max-width: 8vh;"></td>
-              <td>Alhama CF ElPozo</td>
-              <td>0-0</td>
-              <td>Sporting Club Huelva</td>
-              <td><img src="escuts/sporting-club.png" style="max-width: 8vh;"></td>
+              <td><img src="escuts/sevilla.png" style="max-width: 8vh;"></td>
+              <td>Sevilla FC</td>
+              <td>Dv. 19/5
+                20:00
+              </td>
+              <td>Valencia CF</td>
+              <td><img src="escuts/valencia-femenino.png" style="max-width: 8vh;"></td>
             </tr>
             <tr>
               <td><img src="escuts/atletico-feminas.png" style="max-width: 8vh;"></td>
-              <td>Atletico de Madrid</td>
-              <td>1-1</td>
+              <td>Atletico Madrid</td>
+              <td>Dv. 19/5
+                21:00
+              </td>
+              <td>UDG Tenerife</td>
+              <td><img src="escuts/granadilla.png" style="max-width: 8vh;"></td>
+            </tr>
+            <tr>
+              <td><img src="escuts/sporting-club.png" style="max-width: 8vh;"></td>
+              <td>Sporting Club Huelva</td>
+              <td>Ds. 20/5
+                12:00
+              </td>
+              <td>Levante Las Planes</td>
+              <td><img src="escuts/levante las planas.png" style="max-width: 8vh;"></td>
+            </tr>
+            <tr>
+              <td><img src="escuts/Deportivo Alaves.png" style="max-width: 6vh;"></td>
+              <td>Deportivo Alavés</td>
+              <td>Ds. 20/5
+                12:00
+              </td>
+              <td>Alhama CF ElPozo</td>
+              <td><img src="escuts/Alhama el pozo.png" style="max-width: 8vh;"></td>
+            </tr>
+            <tr>
+              <td><img src="escuts/athletic-femenino.png" style="max-width: 8vh;"></td>
+              <td>Athletic Club</td>
+              <td>Ds. 20/5
+                12:00
+              </td>
               <td>Villarreal CF</td>
               <td><img src="escuts/villarreal.png" style="max-width: 8vh;"></td>
             </tr>
             <tr>
-              <td><img src="escuts/granadilla.png" style="max-width: 8vh;"></td>
-              <td>UDG Tenerife</td>
-              <td>3-1</td>
-              <td>Sevilla FC</td>
-              <td><img src="escuts/sevilla.png" style="max-width: 8vh;"></td>
-            </tr>
-            <tr>
-              <td><img src="escuts/real-madrid.png" style="max-width: 8vh;"></td>
-              <td>Real Madrid CF</td>
-              <td>3-2</td>
-              <td>Levante UD</td>
-              <td><img src="escuts/levante-femenino.png" style="max-width: 8vh;"></td>
-            </tr>
-            <tr>
-              <td><img src="escuts/valencia-femenino.png" style="max-width: 8vh;"></td>
-              <td>Valencia CF</td>
-              <td>0-2</td>
-              <td>Madrid CFF</td>
               <td><img src="escuts/madrid-futbol-femenino.png" style="max-width: 8vh;"></td>
+              <td>Madrid CFF</td>
+              <td>
+                Dg. 21/5
+                12:00
+              </td>
+              <td>FC Barcelona</td>
+              <td><div class = 'escut'>
+                <img src="escuts/fc-barcelona-femenino.png" style="max-width: 8vh;">
+                <a href="barcelona.html" class="botonEscudo">Boton</a>
+              </div></td>
+            </tr>
+            <tr>
+              <td><img src="escuts/levante-femenino.png" style="max-width: 8vh;"></td>
+              <td>Levante UD</td>
+              <td>Dg. 21/5
+                16:00
+              </td>
+              <td>Real Betis</td>
+              <td><img src="escuts/betis.png" style="max-width: 8vh;"></td>
             </tr>
           </table>
         </div>
