--- a/barcelona.html
+++ b/barcelona.html
@@ -59,7 +59,7 @@
           </div>
         </header>
         <div class="row">
-          <div class="columna">
+          <div class="col sm-4">
             <h2 style="text-align: center;">Plantilla</h2>
             <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
@@ -136,7 +136,7 @@
             </div>
           </div></div>
           
-            <div class="columna" >
+            <div class="col sm-4" >
               <h2 style="text-align: center;">Classificació</h2>
               <table>
                 <thead>
@@ -267,9 +267,9 @@
                 </tbody>
               </table>
             </div>
-            <div class="columna" >
+            <div class="col-sm-4" >
               <h2 style="text-align: center;">Estadistiques</h2>
-              <div class="card">
+              <div>
                 <table>
                     <thead>
                       <tr>
