--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     
     <div class="row">
-      <div class="columna-sm-4">
+      <div class="col sm-4">
         <h2 style="text-align: center;">Notícies</h2>
         <div class="card">
           <img src="noticia.jpg" style="width: 100%">
@@ -55,7 +55,7 @@
           </div>
         </div>
       </div>
-      <div class="columna-sm-4" >
+      <div class="col sm-4" >
         <h2 style="text-align: center;">Classificació</h2>
         <table>
           <thead>
@@ -177,7 +177,7 @@
           </tbody>
         </table>
       </div>
-      <div class="columna-sm-4">
+      <div class="col sm-4">
         <h2 style="text-align: center;">Propera Jornada</h2>
         <div class="card">
           <table>
