--- a/barcelona.html
+++ b/barcelona.html
@@ -39,11 +39,11 @@
           <nav class="navbar">
             <a href="index.html">Inici</a>
             <a href="classificacio.html">Classificació</a>
-            <a class="nav-link" href="resultats.html">Resultats</a>
-            <a class="nav-link" href="#">Jugadores</a>
-            <a class="nav-link" href="#">Estadístiques</a>
-            <a class="nav-link" href="#">Sancions</a>
-            <a class="nav-link" href="iniciSessio.html">Iniciar sessió</a>
+            <a href="resultats.html">Resultats</a>
+            <a href="#">Jugadores</a>
+            <a href="#">Estadístiques</a>
+            <a href="#">Sancions</a>
+            <a href="iniciSessio.html">Iniciar sessió</a>
           </nav>
         </div>
         <header class="barcelona-header card">
