modificació per ser responcive

--- a/iniciSessio.html
+++ b/iniciSessio.html
@@ -49,7 +49,7 @@
             <div id = "central">
               <div id = "login">
                 <div class = "titulo">
-                  Dades d'accés
+                  Dades d'accés per a arbitres
                 </div>
                 <form id = "login"  @submit.prevent="login">
                   <input type = "text" name = "usuari" placeholder="Usuari" v-model="id" required>
