--- a/resultats.html
+++ b/resultats.html
@@ -51,7 +51,10 @@
               <td>Sporting Club Huelva</td>
               <td>0-4</td>
               <td>FC Barcelona</td>
-              <td><img src="escuts/fc-barcelona-femenino.png" style="max-width: 8vh;"></td>
+              <td><div class = 'escut'>
+                <img src="escuts/fc-barcelona-femenino.png" style="max-width: 10vh;">
+                <a href="barcelona.html" class="botonEscudo">Boton</a>
+              </div></td>
             </tr>
             <tr>
               <td><img src="escuts/sevilla.png" style="max-width: 8vh;"></td>
