--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     <link href="style.css" rel="stylesheet">
     <title>Futfem</title>
   </head>
@@ -34,11 +38,11 @@
       <nav class="navbar">
         <a href="index.html">Inici</a>
         <a href="classificacio.html">Classificació</a>
-        <a class="nav-link" href="resultats.html">Resultats</a>
-        <a class="nav-link" href="#">Jugadores</a>
-        <a class="nav-link" href="#">Estadístiques</a>
-        <a class="nav-link" href="#">Sancions</a>
-        <a class="nav-link" href="iniciSessio.html">Iniciar sessió</a>
+        <a href="resultats.html">Resultats</a>
+        <a href="#">Jugadores</a>
+        <a href="#">Estadístiques</a>
+        <a href="#">Sancions</a>
+        <a href="iniciSessio.html">Iniciar sessió</a>
       </nav>
     </div>
     
